--- a/src/pages/MaxDoctor/MaxDoctor.module.css
+++ b/src/pages/MaxDoctor/MaxDoctor.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: pink;
+  background: url('../../assets/background.jpg') no-repeat center;
+  width: 100%;
   height: 100vh;
 }
