--- a/src/components/MaxDoctorForm/MaxDoctorForm.module.css
+++ b/src/components/MaxDoctorForm/MaxDoctorForm.module.css
@@ -2,13 +2,6 @@
   margin-top: 30px;
 }
 
-.input {
-  border: none;
-  background: none;
-  border-bottom: 2px solid #9c83be;
-  /* width: 500px; */
-}
-
 .select {
   border: none;
   background: none;
@@ -21,4 +14,27 @@
   justify-content: flex-start;
   border-bottom: 2px solid #9c83be;
   margin: 0.5rem 3rem;
+}
+
+.button {
+  margin-top: 10px;
+  width: 500px;
+  border: none;
+  padding: 0.6rem;
+  text-transform: uppercase;
+  background: #9c83be;
+  border-radius: 8px;
+  color: #ffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background: #7159c1;
+}
+
+.paragraph {
+  text-transform: uppercase;
+  margin-top: 30px;
 }
