--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,9 +1,6 @@
 .container {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  /* height: 100%;
-  width: 100%; */
+  height: 100%;
+  width: 100%;
 }
 
 .wrapper {
@@ -15,4 +12,5 @@
 .item {
   height: 110px;
   width: 200px;
+  color: #6b6a6b;
 }
