--- a/src/components/ReactSelect/ReactSelect.module.css
+++ b/src/components/ReactSelect/ReactSelect.module.css
@@ -30,5 +30,7 @@
   font-size: 0.875rem;
 }
 
-@media only screen and (max-width: 700px) {
+.success {
+  color: #4bb543;
+  font-size: 0.875rem;
 }
