--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('../node_modules/react-toastify/dist/ReactToastify.css');
+
 * {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
