--- a/src/components/MaxDoctorLogo/MaxDoctorLogo.module.css
+++ b/src/components/MaxDoctorLogo/MaxDoctorLogo.module.css
@@ -1,4 +1,6 @@
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,7 +9,19 @@
 }
 
 .paragraph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-transform: uppercase;
   font-weight: bold;
   color: #7e479b;
+}
+
+@media only screen and (max-width: 700px) {
+  .paragraph {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25px;
+  }
 }
