--- a/src/pages/MaxDoctor/MaxDoctor.module.css
+++ b/src/pages/MaxDoctor/MaxDoctor.module.css
@@ -1,22 +1,15 @@
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-size: cover;
-  background: url('../../assets/background.jpg') no-repeat center;
-  width: 100%;
-  height: 100%;
+  background-image: url('../../assets/background.jpg');
 }
 
 .buttonContainer {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.campo {
-  display: none;
-  color: red;
-  border: none;
-  font-size: 12px;
 }
